fix(cart): fix get cart products
